<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="9%"
        app:layout_paddingLeftPercent="2%w"
        app:layout_paddingRightPercent="2%w"
        android:background="#DDDDDD"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/date_week_sunday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_textSizePercent="5%w"
            android:gravity="center"
            android:text="@string/week_sunday"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_week_monday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_textSizePercent="5%w"
            android:gravity="center"
            android:text="@string/week_monday"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_week_thesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_textSizePercent="5%w"
            android:gravity="center"
            android:text="@string/week_thesday"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_week_wednesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_textSizePercent="5%w"
            android:gravity="center"
            android:text="@string/week_wednesday"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_week_thursday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_textSizePercent="5%w"
            android:gravity="center"
            android:text="@string/week_thursday"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_week_friday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_textSizePercent="5%w"
            android:gravity="center"
            android:text="@string/week_friday"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_week_saturday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_textSizePercent="5%w"
            android:gravity="center"
            android:text="@string/week_saturday"
            android:textColor="@color/black" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <TextView
        android:id="@+id/date_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_paddingLeftPercent="7%w"
        app:layout_paddingTopPercent="3%"
        app:layout_textSizePercent="5%w"
        android:gravity="center_vertical"
        android:text="2017年1月"
        android:textColor="@color/black" />

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_paddingLeftPercent="2%w"
        app:layout_paddingRightPercent="2%w"
        android:orientation="vertical" >

        <com.yunbaba.freighthelper.ui.customview.VerticalViewPager
            android:id="@+id/date_viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >
        </com.yunbaba.freighthelper.ui.customview.VerticalViewPager>
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>