<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <include
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="@string/layout_title_height"
            layout="@layout/layout_title" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            app:layout_heightPercent="9%"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/car_select_route"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_textSizePercent="5%w"
                android:drawablePadding="-20dp"
                android:drawableRight="@drawable/car_down"
                android:gravity="center"
                android:text="@string/car_select_route"
                android:textColor="#109EA2" />

            <TextView
                android:id="@+id/car_select_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_textSizePercent="5%w"
                android:gravity="center"
                android:text="@string/car_select_date"
                android:textColor="#109EA2" />

            <TextView
                android:id="@+id/car_select_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_textSizePercent="5%w"
                android:gravity="center"
                android:text="@string/car_select_time"
                android:textColor="#109EA2" />
        </com.zhy.android.percent.support.PercentLinearLayout>

        <ImageView
            android:id="@+id/car_select_cursor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="matrix"
            android:src="@drawable/car_cursor" />

        <com.yunbaba.freighthelper.ui.customview.NoScrollViewPager
            android:id="@+id/car_select_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" >
        </com.yunbaba.freighthelper.ui.customview.NoScrollViewPager>
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>